Fix clear and add icon alignment chrome

--- a/packages/style/scss/badges.scss
+++ b/packages/style/scss/badges.scss
@@ -31,6 +31,7 @@
   span {
     overflow: hidden;
     text-overflow: ellipsis;
+    line-height: 1.5rem;
   }
 
   .organisation-logo {
@@ -52,7 +53,6 @@
     margin-left: 0.5rem !important;
     font-size: 0 !important;
     opacity: 1;
-    line-height: 1.5 !important;
 
     @at-root .xxl-page & {
       @media (min-width: $bp-4k) {
@@ -80,6 +80,7 @@
     color: $mediumgrey;
     font-size: $font-size-smallest;
     margin-left: 0.5rem;
+    line-height: 1;
 
     @at-root .xxl-page & {
       @media (min-width: $bp-4k) {
